2005-08-05  William Otte  <wotte@dre.vanderbilt.edu>

	* XSC/SemanticGraph.hpp

	Added this back into the repository.

Thu Aug  4 11:25:52 2005  Arvind Krishna  <arvindkr@arvindkr.qualcomm.com>

	* Tests/ComplexTypeImport:
	
	  A simple test where a schema's type extends a type defined in
	  another schema.
	
	* Tests/ComplexTypeImport/Importee.xsd:
	* Tests/ComplexTypeImport/Importer.xsd:

	  Individual schema files.
	
Thu Aug  4 11:12:44 2005  Arvind Krishna  <arvindkr@arvindkr.qualcomm.com>

	* CXX/CDR.hpp:
	* CXX/CDR.cpp:
	  Removed these extraneous files as these are not necessary now!

Wed Jul 20 17:15:16 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * CXX/Source.cpp:

          I had missed handling elements that can be optional. These occur
          in the schema as minOccurs=0 maxOccurs=1..n. These should be
          written at the end of writing a complex element and then read
          last and added to the element. This commit addresses this bug.

Wed Jul 20 15:14:28 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * Added XSC as a module to the WashU CVS.

Tue Jul 19 17:27:25 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * NEWS:

          Added a NEWS file that illustrates the latest and greatest
          feature additions to XSC.

Tue Jul 19 17:10:43 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * CXX/Elements.hpp:
        * CXX/Generator.cpp:
        * CXX/Header.cpp:
        * CXX/Inline.cpp:
        * CXX/Source.cpp:

          This commit completes the generation of CDR Reader Writer
          operations automatically from XML schemas. The issues that were
          resolved include ensuring (1) ordering of operations, i.e.,
          reads and write and done in the same order, (2) optional
          attributes are read after the element is constructed, and (3)
          adding sequences after element constructions. Further care had